# aiida-dislocation

./: .copier-answers.yml  README.md  pyproject.toml  reproduce_issue.py
docs/: conf.py  developer.md  index.md  myst.yml
docs/_build/doctrees/: environment.pickle  index.doctree  tutorial.doctree
docs/_build/doctrees/developer_guide/: gsfe.doctree  index.doctree  overview.doctree  usfe.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  tutorial.html
docs/_build/html/_sources/: index.rst.txt  tutorial.rst.txt
docs/_build/html/developer_guide/: gsfe.html  index.html  overview.html  usfe.html
docs/developer_guide/: gsfe.rst  index.rst  overview.rst  usfe.rst
src/aiida_dislocation/: __init__.py
src/aiida_dislocation/calculations/: __init__.py  structure.py  thermo_pw.py
src/aiida_dislocation/data/: __init__.py  cleavaged_structure.py  faulted_structure.py  gliding_systems.py  test_dislocation-lucia.ipynb  test_dislocation.ipynb  test_structures.ipynb  test_thermo_pw.ipynb  thermo_pw.yaml  usf.yaml
src/aiida_dislocation/data/structures/cif/: AuCu3.cif  CsCl.cif  Mg.cif  NiAl.cif  NiAs.cif  SiO2.cif
src/aiida_dislocation/examples/: test_cut.ipynb  test_dislocation-lucia.ipynb  test_dislocation.ipynb  usf-lucia.yaml  usf.yaml
src/aiida_dislocation/examples/structures/cif/: Al-225-A1.conv.cif  Al-227-A2.cif  V-227-A2.cif  V-227-A2.conv.cif
src/aiida_dislocation/parsers/: thermo_pw.py
src/aiida_dislocation/tools/: __init__.py  builder.py  cut.py  gliding_systems.py  structure.py  structure_builder.py  structure_utils.py  structures.py
src/aiida_dislocation/workflows/: __init__.py  esfe.py  gsfe.py  gsfe_relax.py  isfe.py  layer_relax.py  mixins.py  relax.py  sfe_spacing.py  sfebase.py  surface.py  twinning.py  usf.py  usfe.py
src/aiida_dislocation/workflows/protocols/: esfe.yaml  gsfe.yaml  isfe.yaml  layer_relax.yaml  sfebase.yaml  surface.yaml  twinning.yaml  usf.yaml  usfe.yaml
tests/: conftest.py  test_cleavaged_structure_data.py  test_faulted_structure_data.py  test_pw_relax_namespaces.py  test_surface_workchain.py  test_usfe.py
